# Repaso-punteros-y-OMP

./: CMakeLists.txt  correc_E1E1.cpp  correc_E1E2_mpi.cpp  main.cpp  punteros.cpp  repaso_omp.cpp
